--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -194,6 +194,8 @@ html {
     font: 112.5%/1.45em georgia, serif;
     box-sizing: border-box;
     overflow-y: scroll;
+    background-color: #ff73ad59;
+    /* background-color: #ffd3e4;*/
 }
 /* * {
   box-sizing: inherit;
